[project]
name = "github"
version = "0.1.0"
description = "Read-mostly GitHub access for orq-ai repositories"
requires-python = ">=3.11"
license = "Apache-2.0 OR MIT"
dependencies = ["httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.centaur]
module = "client.py"
secrets = [
    { type = "http", name = "GITHUB_TOKEN", match_headers = ["Authorization"], hosts = ["api.github.com"] },
]
